mylaptop/Docker-Zero-to-Hero/examples/python-web-app/deployment_config-map.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
        - name: python-app
          image: surajitpaldocker/python-sample-app-demo:v1
          ports:
            - containerPort: 8000
