mylaptop/Docker-Zero-to-Hero/examples/python-web-app/deployment_secrets_using_env_configfile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
        - name: python-app
          image: surajitpaldocker/python-sample-app-demo:v1
          # Mount the keys as separate files inside /opt
          volumeMounts:
            - name: secret-volume
              mountPath: /opt/db-password
              subPath: db-password
            - name: secret-volume
              mountPath: /opt/db-port
              subPath: db-port
          ports:
            - containerPort: 8000
      # Connect the volume to the new .env secret name
      volumes:
        - name: secret-volume
          secret:
            secretName: app-env-secrets
